--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
 	<link rel='stylesheet' href='styles.css'/>
 </head>
 <body>
-<div id="logo" >
-	<img src="/home/louis/The-Odin-Project/google-homepage/googlelogo.png">
-</div>
+	<!--- Centre (flex) box -->
+	<section class="centerbox"> 
+		<div> 
+			<img id="logo" src="/home/louis/The-Odin-Project/google-homepage/googlelogo.png"> 
+		</div>
+		<div> 
+			<input class="centeritem" alt="search type="text" name=""> 
+		</div>
+	</section>
 </body>
 </html>
