--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<img id="logo" src="/home/louis/The-Odin-Project/google-homepage/googlelogo.png"> 
 		</div>
 		<div> 
-			<input class="centeritem" alt="search type="text" name=""> 
+			<input type="text" class="centeritem" id="searchbar"> 
 		</div>
 	</section>
 </body>
