Added search buttons

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 		</div>
 		<div> 
 			<input type="text" class="centeritem" id="searchbar"> 
-		</div>
+		<div>
+			<input type="button" value="Google Search" class="centeritem" id="googlesearch"> 
+			<input type="button" value="I'm Feeling Lucky" class="centeritem" id="feelinglucky">
+		<div>
 	</section>
 </body>
 </html>
