Reworked order, added About/Store hyperlinks

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
 	<link rel='stylesheet' href='styles.css'/>
 </head>
 <body>
+	<!---Top bar -->
+	<section>
+		<div id="hyperlinks">
+			<a href="https://about.google/?fg=1&utm_source=google-GB&utm_medium=referral&utm_campaign=hp-header"> About </a>
+			<a href="https://store.google.com/GB/?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=en-GB"> Store </a>
+		</div>
+	</section>
 	<!--- Centre (flex) box -->
 	<section class="centerbox"> 
 		<div> 
@@ -16,7 +23,7 @@
 		<div>
 			<input type="button" value="Google Search" class="centeritem" id="googlesearch"> 
 			<input type="button" value="I'm Feeling Lucky" class="centeritem" id="feelinglucky">
-		<div>
+		</div>
 	</section>
 </body>
 </html>
