Reworked About/Store hyperlinks, added style classes/ID's to hyperlinks.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <body>
 	<!---Top bar -->
 	<section>
-		<div id="hyperlinks">
-			<a href="https://about.google/?fg=1&utm_source=google-GB&utm_medium=referral&utm_campaign=hp-header"> About </a>
-			<a href="https://store.google.com/GB/?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=en-GB"> Store </a>
-		</div>
+		<span class="hyperlinks">
+			<a href="https://about.google/?fg=1&utm_source=google-GB&utm_medium=referral&utm_campaign=hp-header" id="about-a"> About </a>
+			<a href="https://store.google.com/GB/?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=en-GB" id="store-a"> Store </a>
+		<span>
 	</section>
 	<!--- Centre (flex) box -->
 	<section class="centerbox"> 
