Fixed markup errors in centerbox, added </div> in centrebox.

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 		<div> 
 			<img id="logo" src="/home/louis/The-Odin-Project/google-homepage/googlelogo.png"> 
 		</div>
-		<div> 
-			<input type="text" class="centeritem" id="searchbar"> 
-		<div>
-			<input type="button" value="Google Search" class="centeritem" id="googlesearch"> 
-			<input type="button" value="I'm Feeling Lucky" class="centeritem" id="feelinglucky">
+			<div> 
+			<input type="text" class="centeritem" id="searchbar">
+				<input type="button" value="Google Search" class="centeritem" id="googlesearch"> 
+				<input type="button" value="I'm Feeling Lucky" class="centeritem" id="feelinglucky">
+			</div>
 		</div>
 	</section>
 </body>
