Added top right navbox, created Gmail + Image hyperlinks

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 		<span class="hyperlinks">
 			<a href="https://about.google/?fg=1&utm_source=google-GB&utm_medium=referral&utm_campaign=hp-header" id="about-a"> About </a>
 			<a href="https://store.google.com/GB/?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=en-GB" id="store-a"> Store </a>
-		<span>
+		</span>
+		<div class="toprightbar">
+			<a href="https://mail.google.com/mail" id="gmail-a" id="gmail"> Gmail </a>
+			<a href="https://www.google.co.uk/imghp?hl=en&tab=wi&ogbl" id="images-a" id="images"> Images </a>
+		</div>
 	</section>
 	<!--- Centre (flex) box -->
 	<section class="centerbox"> 
@@ -19,7 +23,7 @@
 			<img id="logo" src="/home/louis/The-Odin-Project/google-homepage/googlelogo.png"> 
 		</div>
 			<div> 
-			<input type="text" class="centeritem" id="searchbar">
+				<input type="text" class="centeritem" id="searchbar">
 				<input type="button" value="Google Search" class="centeritem" id="googlesearch"> 
 				<input type="button" value="I'm Feeling Lucky" class="centeritem" id="feelinglucky">
 			</div>
