Added footer and hyperlinks.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<a href="https://www.google.co.uk/imghp?hl=en&tab=wi&ogbl" id="images-a" id="images"> Images </a>
 		</div>
 	</section>
-	<!--- Centre (flex) box -->
+	<!--- Centre box -->
 	<section class="centerbox"> 
 		<div> 
 			<img id="logo" src="/home/louis/The-Odin-Project/google-homepage/googlelogo.png"> 
@@ -28,6 +28,23 @@
 				<input type="button" value="I'm Feeling Lucky" class="centeritem" id="feelinglucky">
 			</div>
 		</div>
+	</section>
+	<!--- Bottom nav bar -->
+	<section class="footer">
+		<div class="footbar">
+			<span class="langbar">United Kingdom</span>
+		</div>
+			<div class=bottomleftbar>
+				<div class="leftfooter">
+					<a href="https://ads.google.com/intl/en_uk/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2m--ahpm-0000000019-0000000001&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1" id="advertising">Advertising</a>
+					<a href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1#?modal_active=none" id="business">Business</a>
+					<a href="https://www.google.com/search/howsearchworks/?fg=1" id="howsearchworks">How Search Works</a>
+				<div class="rightfooter">
+					<a href="https://policies.google.com/privacy?fg=1" id="privacy">Privacy</a>
+					<a href="https://policies.google.com/terms?fg=1" id="terms">Terms</a>
+					<a href="https://www.google.com/preferences?hl=en" id="settings">Settings</a>
+				</div>
+			</div>
 	</section>
 </body>
 </html>
