Changed source of Google logo from local.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<!--- Centre box -->
 	<section class="centerbox"> 
 		<div> 
-			<img id="logo" src="/home/louis/The-Odin-Project/google-homepage/googlelogo.png"> 
+			<img id="logo" src="https://www.google.co.uk/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"> 
 		</div>
 			<div> 
 				<input type="text" class="centeritem" id="searchbar">
